<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".DomainDetailsActivity">
    <item
        android:id="@+id/action_up"
        android:gravity="left|start"
        android:icon="?attr/homeAsUpIndicator"
        android:title="@string/action_up"
        app:showAsAction="always" />
    <item android:id="@+id/action_sync"
          android:icon="@drawable/ic_action_sync"
          android:title="@string/action_sync"
          android:orderInCategory="80"
          app:showAsAction="ifRoom" />
    <!-- Copy, should appear as action button -->
    <item android:id="@+id/action_copy"
          android:icon="@drawable/ic_action_copy"
          android:title="@string/action_copy"
          android:orderInCategory="100"
          app:showAsAction="ifRoom" />
</menu>