<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LockScreenFragment">

    <TextView
        android:text="@string/masterpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewMasterpasswordHeading" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/masterPasswordFieldHint"
        android:id="@+id/editTextMasterPassword"
        android:layout_below="@+id/textViewMasterpasswordHeading"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextMasterPassword"
        android:id="@+id/textViewDecryptionMessage"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/unlockButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewDecryptionMessage"
        android:layout_centerVertical="true"
        android:background="#00838f"
        android:text="@string/unlock"
        android:visibility="visible" />

</RelativeLayout>