<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/masterpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewMasterpasswordHeading" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/editTextMasterPassword"
                android:layout_below="@+id/textViewMasterpasswordHeading"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:text="@string/domain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextMasterPassword"
                android:id="@+id/textViewDomainHeading" />

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewDomainHeading"
                android:id="@+id/autoCompleteTextViewDomain"
                android:inputType="textUri"
                android:imeOptions="actionNext"
                android:completionThreshold="@integer/completionThreshold" />

            <TextView
                android:text="@string/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/autoCompleteTextViewDomain"
                android:id="@+id/textViewUsernameHeading" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/editTextUsername"
                android:layout_below="@+id/textViewUsernameHeading"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageViewContains"
                android:layout_below="@+id/editTextUsername"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:src="@drawable/ic_contains"
                android:layout_marginBottom="-12dp"
                android:contentDescription="@string/contentDescriptionInSet" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageViewForceContains"
                android:layout_above="@+id/checkBoxLettersForce"
                android:layout_toRightOf="@+id/checkBoxSpecialCharacter"
                android:layout_toEndOf="@+id/checkBoxSpecialCharacter"
                android:src="@drawable/ic_force_contains"
                android:layout_marginBottom="-12dp"
                android:layout_marginLeft="5dp"
                android:contentDescription="@string/contentDescriptionForce" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/checkBoxLetters"
                android:layout_below="@+id/imageViewContains"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:checked="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/letters"
                android:id="@+id/checkBoxLettersForce"
                android:layout_below="@+id/imageViewContains"
                android:layout_toRightOf="@id/checkBoxLetters"
                android:layout_toEndOf="@id/checkBoxLetters"
                android:checked="false" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/checkBoxDigits"
                android:layout_below="@+id/checkBoxLetters"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:checked="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/digits"
                android:id="@+id/checkBoxDigitsForce"
                android:layout_below="@+id/checkBoxLetters"
                android:layout_toRightOf="@id/checkBoxDigits"
                android:layout_toEndOf="@id/checkBoxDigits"
                android:checked="false" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/checkBoxSpecialCharacter"
                android:layout_below="@+id/checkBoxDigits"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:checked="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/special_characters"
                android:id="@+id/checkBoxSpecialCharacterForce"
                android:checked="false"
                android:layout_below="@+id/checkBoxDigits"
                android:layout_toRightOf="@+id/checkBoxSpecialCharacter"
                android:layout_toEndOf="@+id/checkBoxSpecialCharacter" />

            <TextView
                android:text="@string/length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/checkBoxSpecialCharacter"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/textViewLengthHeading" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/length_init"
                android:id="@+id/textViewLengthDisplay"
                android:layout_below="@+id/checkBoxSpecialCharacter"
                android:layout_toEndOf="@+id/textViewLengthHeading"
                android:layout_toRightOf="@+id/textViewLengthHeading"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp" />

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/seekBarLength"
                android:layout_below="@+id/textViewLengthHeading"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:max="21"
                android:progress="6" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/generator_button"
                android:id="@+id/generatorButton"
                android:layout_below="@+id/seekBarLength"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:enabled="false"
                android:visibility="visible" />

            <TextView
                android:text="@string/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/generatorButton"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/textViewPasswordHeading" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/init_password"
                android:id="@+id/textViewPassword"
                android:layout_below="@+id/textViewPasswordHeading"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:textAlignment="center" />

            <TextView
                android:text="@string/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextUsername"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/textViewLegacyPasswordHeading"
                android:visibility="invisible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/init_password"
                android:id="@+id/textViewLegacyPassword"
                android:layout_below="@id/textViewLegacyPasswordHeading"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:textAlignment="center"
                android:visibility="invisible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/iteration_count_beginning"
                android:id="@+id/iterationCountBeginning"
                android:layout_below="@+id/textViewPassword"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/iteration_count_initial"
                android:id="@+id/iterationCount"
                android:layout_below="@+id/textViewPassword"
                android:layout_toEndOf="@+id/iterationCountBeginning"
                android:layout_toRightOf="@+id/iterationCountBeginning"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/iteration_count_end"
                android:id="@+id/iterationCountEnd"
                android:layout_below="@+id/textViewPassword"
                android:layout_toEndOf="@+id/iterationCount"
                android:layout_toRightOf="@+id/iterationCount"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
